--- a/style2.css
+++ b/style2.css
@@ -1,7 +1,8 @@
     body {
         font-size: 20px;
         font-family: 'Concert One', cursive;
-        color: pink
+        color: pink;
+        background-image: url(https://wallpapercave.com/wp/wp3612601.jpg);
     }
     
     #Jumbotron {
