--- a/style2.css
+++ b/style2.css
@@ -2,7 +2,8 @@
         font-size: 20px;
         font-family: 'Concert One', cursive;
         color: pink;
-        background-image: url(https://wallpapercave.com/wp/wp3612601.jpg);
+        text-shadow: 1px 1px 2px #000000;
+        background-image: url(https://wallpapercave.com/wp/wp5235979.jpg);
     }
     
     #Jumbotron {
